tests/ui/feature-gates/feature-gate-async-trait-bounds.stderr
error[E0658]: `async` trait bounds are unstable
  --> $DIR/feature-gate-async-trait-bounds.rs:3:17
   |
LL | fn test(_: impl async Fn()) {}
   |                 ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_trait_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: use the desugared name of the async trait, such as `AsyncFn`

error[E0658]: use of unstable library feature `async_closure`
  --> $DIR/feature-gate-async-trait-bounds.rs:3:23
   |
LL | fn test(_: impl async Fn()) {}
   |                       ^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
